# EarningsPredictDataGathering

./: .gitignore  .pylintrc  IDEAS.MD  NOTES.md  TODO.md  mypy.ini  pyproject.toml  requirements.txt  run.py  symbols_cache.json  test.py  testing.py  upcoming_earnings.py  upcoming_symbols.pickle
config/: api_keys.py
data-gathering/testing/: test_api_keys.py
data-gathering/utils/: __init__.py
data_gathering/: __init__.py
data_gathering/.cache/: cache.db
data_gathering/config/: __init__.py  api_keys.py  config.py  config.yaml  logging.toml
data_gathering/data/: __init__.py  fetch_all.py  gather_all_data.py  get_upcoming_earnings.py  upcoming_earnings.py  upcoming_earnings_history.py
data_gathering/exceptions/: config_exceptions.py  project_base_exception.py
data_gathering/models/: __init__.py  async_session_manager.py  date_range.py  exceptions.py  mappings.py  symbol_iterator.py  symbols.py  task.py  task_base.py  task_creator.py  task_handler.py  task_meta.py  type_aliases.py  upcoming_earning.py  yaml_objects.py
data_gathering/test/: test_api_keys.py  test_batchcount_iterator.py  test_cache.py  test_config_loading.py  test_date_range.py  test_date_utils.py  test_session_manager.py  test_symbol.py  test_symbol_iterator.py  test_task.py  test_upcoming_earning.py  test_upcoming_earnings.py  test_upcoming_earnings_history.py
diagrams/: meta.plantuml  plan.puml
models/: symbols.py
output/: historical_data.parquet
testing-gathering/: .gitignore  alpaca-test-nothread.py  alpaca-test.py  asset-list.py  requirements.txt
utils/: utils.py
(+23 files in other folders)
